[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neewerlite"
version = "0.3.1"
description = "Python library for controlling all Neewer lights (Studio + Home) via Bluetooth LE."
readme = "README.md"
authors = [
  { name = "Mathieu Garnault", email = "mathieu@example.com" },
]
requires-python = ">=3.9"
dependencies = [
  "bleak>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/matthobby/neewer-lib"
